# MangaFox-Download-Script

./: .gitignore  .pre-commit-config.yaml  AUTHOR  CHANGELOG.md  README.md  mfdl.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_mfdl.py
